stylesheets/video-tutorial.css
:root{
	--bs-body-font-size: 0.9rem;
}

.p-4 {
	padding: 2rem!important;
}

.g-5, .gx-5 {
    --bs-gutter-x: 2.3rem;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
    margin-bottom: 0.8rem;
}

.table {
	--bs-table-hover-bg: rgba(0, 0, 0, 0.025);
}

.table.indice {
	position: absolute;
	width: 97%;
}

.table.indice td {
	width: 100%;
	padding: 0;
}

.table.indice td:first-child {
	padding-left: 0;
}

.table.indice td:last-child {
	padding-right: 0;
	text-align: right;
}

.table.indice a {
	display: flex;
	justify-content: space-between;
	padding: 8px 0;
	text-decoration: none;
}

.col-main {
	flex-grow: 1;
	/* background-color: gray; */
}

.col-indice {
	display: flex;
	flex-direction: column;
	width: clamp(300px, 25%, 350px);
	/* background-color: orange; */
}

.indice-container {
	overflow-y: scroll;
    height: 100%;
    position: relative;
}

@media (max-width: 1227px) {
	.col-indice {
		display: block;
		/* background-color: orange; */
	}

	.indice-container {
		overflow: auto;
    	height: unset;
	}

	.table.indice {
		position: relative;
    	width: 100%;
	}
}

.title {
	display: inline-block;
}

/* Custom Dropdown */

.dropdown {
	position: relative;
	display: inline-block;
	border: 1px solid #cfd4d8;
	border-radius: 4px;
    margin-left: 15px;
	vertical-align: top;
}

.dropdown-content {
	display: none;
	position: absolute;
	overflow: hidden;
	min-width: 160px;
	margin-top: 1px;
	background-color: #fff;
	z-index: 1;
	border-radius: 4px;
}

.dropdown:hover .dropdown-content {
	display: block;
}

.dropdown a {
	text-decoration: none;
	color: unset;
}

.dropdown-item {
	display: flex;
	align-items: center;
	padding: 5px 8px;
	cursor: pointer;
}

.dropdown-item img {
	margin-right: 5px;
}

.dropdown-content .dropdown-item {
	padding: 8px;
}

.dropdown-content .dropdown-item:hover {
	background-color: #f9f9f9;
}

